--- a/dot.html
+++ b/dot.html
@@ -88,7 +88,8 @@
             margin-bottom: 10px;
             padding: 12px;
             border-radius: 15px;
-            max-width: 75%;
+            max-width: 90%;
+            width: 90%;
             clear: both;
             word-wrap: break-word;
         }
