--- a/dot.html
+++ b/dot.html
@@ -59,9 +59,9 @@
         /* Chat container */
         #chat-container {
             background-color: rgba(255, 255, 255, 0.1); /* 50% transparent white */
-            width: 90%;
-            max-width: 90%;
-            height: 90vh;
+            width: 100%;
+            max-width: 100%;
+            height: 100%;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             display: flex;
