--- a/dot.html
+++ b/dot.html
@@ -60,8 +60,8 @@
         #chat-container {
             background-color: rgba(255, 255, 255, 0.1); /* 50% transparent white */
             width: 100%;
-            max-width: 100%;
-            height: 100%;
+            max-width: 100vh;
+            height: 100vh;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             display: flex;
