--- a/dot.html
+++ b/dot.html
@@ -66,7 +66,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
-            overflow: hidden;
+            overflow: None;
             margin-top:5vh;
             margin-bottom: 5vh;
             
