--- a/dot.html
+++ b/dot.html
@@ -59,17 +59,16 @@
         /* Chat container */
         #chat-container {
             background-color: rgba(255, 255, 255, 0.1); /* 50% transparent white */
-            width: 100%;
-            max-width: 100vh;
-            height: 100vh;
+            width: 90%;
+            max-width: 800px;
+            height: 85vh;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
-            overflow: None;
-            margin-top:5vh;
-            margin-bottom: 5vh;
-            
+            overflow: hidden;
+            margin-top: 8vh; /* Space for taskbar */
+            position: relative;
         }
 
         /* Output section */
