--- a/dot.html
+++ b/dot.html
@@ -61,7 +61,7 @@
             background-color: rgba(255, 255, 255, 0.1); /* 50% transparent white */
             width: 90%;
             max-width: 800px;
-            height: 85vh;
+            height: 90%;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             display: flex;
