--- a/dot.html
+++ b/dot.html
@@ -67,7 +67,8 @@
             display: flex;
             flex-direction: column;
             overflow: hidden;
-            margin-top: 8vh; /* Space for taskbar */
+            margin-top: 8vh;
+            margin-bottom:10vh;/* Space for taskbar */
             position: relative;
         }
 
