--- a/dot.html
+++ b/dot.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>  <html lang="en">  
+<!DOCTYPE html>  
+<html lang="en">  
 <head>  
     <link rel="icon" href="dot.png" type="image/png">  
     <meta name="description" content="Chatbot Of Dinesh">  
