--- a/dot.html
+++ b/dot.html
@@ -175,6 +175,7 @@
 
         .dark-theme #user-input-container {
             background-color: #222;
+            transparency: 0.5;
         }
 
         .dark-theme #user-input {
